--- a/app/views/ucpengine/dashboard/index.html.erb
+++ b/app/views/ucpengine/dashboard/index.html.erb
@@ -1,2 +1,3 @@
-<h1>UCP CMS Dashboard</h1>
-<p>Hello</p>
+<div class="container dashboard-welcome">
+  <p>Welcome to the UCP cms dashboard. Easily create and manage multiple Terms of Service versions.</p>
+</div>
