--- a/app/views/ucpengine/entries/new.html.erb
+++ b/app/views/ucpengine/entries/new.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing <%= content_class.titleize %></h1>
+New <%= content_class.titleize %>
 
+<div class="row">
 <%= render 'form' %>
+</div>
 
-<%= link_to 'Show', content_entry_path(@entry) %> |
 <%= link_to 'Back', content_entries_path %>
