--- a/app/views/layouts/ucpengine/application.html.erb
+++ b/app/views/layouts/ucpengine/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag    "ucpengine/application", media: "all" %>
   <%= javascript_include_tag "ucpengine/application" %>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -18,7 +19,7 @@
   <div class="row">
 
      <div class="col s3 ucp-sidenav">
-    
+
            <p class="ucp-title">UCP cms Dashboard</p>
 
        <ul class="collection">
