add link to new terms

--- a/app/views/ucpengine/entries/index.html.erb
+++ b/app/views/ucpengine/entries/index.html.erb
@@ -1,4 +1,6 @@
+
 <table class="highlight">
+  <%= link_to "New #{content_class.titleize}", new_content_entry_path %>
   <thead>
     <tr>
       <th>Version</th>
