--- a/app/views/ucpengine/dashboard/index.html.erb
+++ b/app/views/ucpengine/dashboard/index.html.erb
@@ -1,3 +1,3 @@
 <div class="container dashboard-welcome">
-  <p>Welcome to the UCP cms dashboard. Easily create and manage multiple Terms of Service versions.</p>
+  <p>Welcome to the UCP cms dashboard. Easily create and manage multiple Service types and versions.</p>
 </div>
